--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_svg: ^2.0.2
-  flutter_swiper_view: ^1.1.8
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
