--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^4.0.3
   flutter_svg: ^2.0.2
   flutter_bloc: ^8.1.2
+  font_awesome_flutter: ^10.4.0
+  currency_text_input_formatter: ^2.1.9
 
 dev_dependencies:
   flutter_test:
