--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
-  flutter_svg: ^2.0.2
   flutter_bloc: ^8.1.2
   font_awesome_flutter: ^10.4.0
   currency_text_input_formatter: ^2.1.9
+  money_formatter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
